css/main.css
/* ... */
/* Viewport is kind of tall; show image at maximum height and then contents below */
@media screen and (max-aspect-ratio: 121/100) {

  .hero {
    padding-bottom: 60.5%; /* overall height of what is visible */
  }

  .hero img {
      top: 0;
      max-width: 118vw; /* match enlargement of section above */
      object-fit: cover;
      left: 50%; transform:translatex(-50%); /* center horizontally */
  }

}






/* Patreon section */

.patreon-section article {
    text-align: center;
    line-height: 1.5;
}

.patreon-button svg {
  max-width: 1rem;
  padding: 0 0.3rem;
}

/* Instagram section */

.instagram-section article {
    margin: 0 auto;
    max-width: 1200px;
}

.instagram-section h2 {
    padding-top: 1rem;
    padding-bottom: 1rem;
    margin: 0;
}

.lightwidget-widget {
    background: white;
    width: 100%;
    border: 0;
    overflow: hidden;
    margin-top: 0;
}

/* Track via Email List */

.track-form-padded {
    padding: 0 2rem;  /* Make sure box is indented to be separated from photo */
}

.track-photo img {
    max-width: 100%;
}

/* ===== Colors ===== */

/*
Gray shades we are using:

#f5f5f5 (245,245,245)
#bdbdbd (189,189,189)
#616161 (97,97,97)
#424242 (66,66,66)
#212121 (33,33,33)
*/

a { color:#00AEA8; }

.dimmer {
    color:#616161;
}

main {
    background:white;
}

nav {
  background:#f5f5f5;
  text-align:right;
  padding-top:5px;
}
nav a {
  color:#bdbdbd;
  margin-top:5px;
  padding:0 0.5em 0 2em;
  font:normal 16px HelveticaNeue-CondensedBold, Impact, sans-serif;
  letter-spacing:1px;
  text-transform:uppercase;
  text-decoration:none;
  white-space: nowrap;
}
nav a.download {
   background:url('data:image/svg+xml;utf8,<svg viewBox="0 0 400 400" preserveAspectRatio="xMinYMin" xmlns="http://www.w3.org/2000/svg"><path fill="#bdbdbd" d="M337.15 187.9a52.69 52.69 0 0 0 7.24-26.64 53 53 0 0 0-87.14-40.52c-15.3-37.91-52.42-64.68-95.81-64.68-57.06 0-103.31 46.26-103.31 103.31 0 3.48.17 6.92.5 10.3-31.68 14.29-53.77 46.08-53.77 83.1a91.17 91.17 0 0 0 91.17 91.17h220.86c41.49 0 78.25-29.56 78.25-79.9v-.82c0-38.63-24.06-65.07-58-75.32zm-78.05 34.9l-71.3 70.1-77.63-76.32h52.88v-73.52a8.61 8.61 0 0 1 8.61-8.61h31.21a8.6 8.6 0 0 1 8.61 8.6v73.53h53.96l-6.34 6.23z"/></svg>') no-repeat left center;
}

.logo, .icons {
    background:rgba(0,0,0,0.5);
}

.exhaustive.icons {
  background:#212121;
}


.patreon-section {
    background:#212121;
    color:#bdbdbd;
}
.patreon-section a {
    color:white;
    text-decoration:none;
}
.patreon-link {
    border-bottom:3px solid #00AEA8;
}

.instagram-section {
    background:#bdbdbd;
}
.instagram-section a {
    color:white;
}

.soundcloud-section {
    background:#f5f5f5;
}
.soundcloud-section a { color:#424242; }

.youtube-section {
    background:#616161;
    color:white;
}
.youtube-section a { color:#f5f5f5; }

.track-section {
    background:#212121;
    color:#bdbdbd;
}
.input-form a {
    color:white;
}
.trapit { display:none !important; }

body > footer {
    background:#bdbdbd;
    color:white;
}

/* ==========================================================================
   Other styles
   ========================================================================== */

.bandsintown-button {
    display:block;
    text-align:center;
    color:#FFF;
    background:#00AEA8;
    padding:6px;
}
.bandsintown-button a {
    color:#FFF;
    text-decoration:none;
}
.bandsintown-button svg {
    width:1.5rem;
    padding-bottom:0.3rem;
}

/* Show soundcloud iframe (loaded from script) at maximum width */

iframe.soundcloud {
  width:100%;
}

/* Hide Bands In Town (generated by their script) when no upcoming dates */
.bit-no-dates-container { display:none; }

/* Special hover tooltip-like display over social icons */
.icons a {
    position:relative;
}
.icons a:after{
    padding:0 5px;
    font-size:80%;
    background:#fff;
    color:#000;
    border-radius:5px;
    box-shadow:0 0 8px 8px #FFF;
    line-height:1;

    content:attr(data-title);
    position:absolute;
    left:10%;
    bottom:8px;
    text-align:center;
    display:block;
    z-index:99;

    opacity:0; /* Invisible until hovered */
    transition:opacity .3s ease-in-out;
}
.icons a:hover:after{
    opacity:0.75;
}
.icons a:last-child:after { /* Also need to do below for 5th icon when we have two rows! SEE BELOW */
  right:15%;  /* plenty of room for shadow effect to not overflow the container on phone */
  left:auto;
}

.no-js .requires-js {
  display:none;
}
.js .js-required {
  display:none;
}
.no-js .js-required {
  padding:0.5rem 1rem;
  margin:0;
  color:purple;
  background:#f5f5f5;
}

.browserupgrade { /* Improve the formatting a bit without messing with original */
  font-size:150%;
  padding:1rem;
}

/* ===== BREAKPOINTS … general (under 600 for mobile, 600+ for desktop) and specialized ===== */

@media only screen and (max-width:599px) {

    /* Bigger social media icons on mobile ... 5-up when we have the 10 icons */
    .exhaustive.icons a {
        width:20%;
    }
    .exhaustive.icons a:nth-child(5):after { /* Need to not overflow text on right */
      right:15%;
      left:auto;
    }

    /* ... and 6-up without margins where we have the 6 icons */
    .popular.icons a {
        width:16.66%;
    }
    .popular.icons a:first-child {
        margin-left:0;
    }

    /* On mobile, center photo rather than side-by-side with mailing list form */
    .track-photo {
        margin-left:25%;
        width:50%;
    }

    /* On mobile, avoid left/right margin on some sections (except for their headers/footers which are textual) */

    .maximize-mobile {
        padding-left:0;
        padding-right:0;
    }
    .maximize-mobile footer, .maximize-mobile header {
        padding-left:1rem;
        padding-right:1rem;
    }

    .download {
      font-size:12px;
    }
}
/* ... */

